# cloudflare-ddns-service

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  requirements.txt  setup.cfg
.github/workflows/: docker-publish.yml
app/: main.py  setup.py  start.py
app/services/: cloudflare_service.py  config_reader.py  ip_retriever.py
app/utils/: argparser.py  logging.py
config/: config.json.template
