[metadata]
name = ddns
version = attr: app.__version__.__version__

[options]
packages=find:
include_package_data = True
install_requires =
	attrs==23.1.0
    beautifulsoup4==4.12.2
    certifi==2023.5.7
    charset-normalizer==3.2.0
    cloudflare==2.11.6
    idna==3.4
    jsonlines==3.1.0
    logging==0.4.9.6
    PyYAML==6.0.1
    requests==2.31.0
    soupsieve==2.4.1
    urllib3==2.0.3

[options.entry_points]
console_scripts = ddns=app.main:main
